<resources>
    <string name="app_name">E-Mon</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_login">Login</string>
    <string name="room_icon">room icon</string>

    <string name="button_connect_text">Connect</string>
    <string name="button_prefill_home_one_text">Set home 1</string>
    <string name="button_prefill_home_two_text">Set home 2</string>
    <string name="button_clean_text">Clean</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>

    <string name="lang_system">System</string>
    <string name="lang_it">Italian</string>
    <string name="lang_en">English</string>
    <string name="language_array_title">Language</string>
    <string-array name="language_array">
        <item>@string/lang_system</item>
        <item>@string/lang_it</item>
        <item>@string/lang_en</item>
    </string-array>
    <string-array name="language_array_entry">
        <item>system</item>
        <item>it</item>
        <item>en</item>
    </string-array>

    <string name="theme_system">System</string>
    <string name="theme_day">Day</string>
    <string name="theme_night">Night</string>
    <string name="theme_array_title">Theme</string>
    <string name="room_bedroom">Bedroom</string>
    <string name="room_bathroom">Bathroom</string>
    <string name="room_kitchen">Kitchen</string>
    <string name="room_lounge">Lounge</string>
    <string name="room_study">Study</string>
    <string name="room_garage">Garage</string>
    <string name="room_hall">Hall</string>
    <string name="room_dining">Dining room</string>
    <string name="room_hallway">Hallway</string>
    <string name="room_unknown">Unknown</string>
    <string name="login_failed">Login failed</string>
    <string name="device_lamp">Lamp</string>
    <string name="device_movement">Movement</string>
    <string name="device_shutter">Shutter</string>
    <string name="device_temperature">Temperature</string>
    <string name="device_unknown">Unknown</string>
    <string name="logout_notify">Logout</string>

    <string-array name="theme_array">
        <item>@string/theme_system</item>
        <item>@string/theme_day</item>
        <item>@string/theme_night</item>
    </string-array>

    <string-array name="theme_array_entry">
        <item>system</item>
        <item>day</item>
        <item>night</item>
    </string-array>
</resources>