<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.login.LoginFragment">


    <TextView
        android:id="@+id/textview_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/username_text"/>

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:importantForAutofill="no"
        android:ems="15"
        android:hint="@string/username_text"
        android:inputType="text"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/textview_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/password_text"/>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:importantForAutofill="no"
        android:ems="15"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/button_clean"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/button_clean_text" />

    <Button
        android:id="@+id/button_prefill"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/button_prefill_home_one_text"
        android:layout_width="100dp"/>

    <Button
        android:id="@+id/button_connect"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/button_connect_text"  android:layout_width="100dp"/>
</LinearLayout>